# churn_model

./: LICENSE  Makefile  README.md  mlflow.db  params.yaml  pyproject.toml
data/raw/: train_new.csv
docs/: mkdocs.yml
docs/docs/: index.md
reports/: data_and_target_drift_dashboard.html
src/models/: model_monitor.py  production_model_selection.py
webapp/model_webapp_dir/: model.joblib
